# flask-crud

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/: auth.py  errors.py
